<resources>
    <string name="app_name">AppCalorias</string>
    <string name="bt_galery">Galeria</string>
    <string name="et_HintPrompt">Agregar informacion</string>
    <string name="calories">Calorias</string>
    <string name="carbohydrates">Hidratos de carbono</string>
    <string name="proteins">Proteinas</string>
    <string name="fats">Grasas</string>
    <string name="mi_options">Calendario</string>
    <string name="mi_profile_settings">Opciones del Perfil</string>
    <string name="mi_calendar">Calendario</string>
    <string name="et_HintAge">Fecha de nacimiento</string>
    <string name="et_HintHeight">Altura en cm</string>
    <string name="et_HintWeight">Peso en kg</string>
    <string name="et_HintGender">Genero</string>
    <string name="et_HintName">Nombre</string>
    <string name="mi_add_profile">Agregar perfil</string>
    <string name="chipMale">M</string>
    <string name="chipFemale">F</string>
    <string name="et_HintUserPhoto">Foto perfil</string>
    <string name="tv_bmrTitle">BMR</string>
    <string name="bt_SelectUser">Seleccionar</string>
    <string name="bt_EditUser">Modificar</string>
    <string name="bt_DeleteUser">Borrar</string>
    <string name="bt_accept">Aceptar</string>
    <string name="bt_cancel">Cancelar</string>
</resources>