<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddEditProfile">

    <!-- Por ahora solo en unidades metricas -->


    <!-- Hacer mejor que esto sea un chip_group -->

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_HintAge"
        app:layout_constraintBottom_toBottomOf="@+id/etAge"
        app:layout_constraintEnd_toStartOf="@+id/etAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etAge"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_HintName"
        app:layout_constraintBottom_toBottomOf="@+id/etName"
        app:layout_constraintEnd_toStartOf="@+id/etName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etName"
        app:layout_constraintVertical_bias="0.695" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_HintWeight"
        app:layout_constraintBottom_toBottomOf="@+id/etWeight"
        app:layout_constraintEnd_toStartOf="@+id/etWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etWeight"
        app:layout_constraintVertical_bias="0.523" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28sp"
        app:layout_constraintEnd_toEndOf="@+id/etAge"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="@+id/etAge"
        app:layout_constraintTop_toBottomOf="@+id/etAge"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/chipMale"
            android:textSize="15sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/chipFemale"
            android:textSize="15sp" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_HintGender"
        app:layout_constraintBottom_toBottomOf="@+id/chipGroup"
        app:layout_constraintEnd_toStartOf="@+id/chipGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chipGroup"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginTop="28sp"
        app:layout_constraintEnd_toEndOf="@+id/etHeight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etHeight"
        app:layout_constraintTop_toBottomOf="@+id/etHeight" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="28sp"
        app:layout_constraintEnd_toEndOf="@+id/etName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etName" />


    <EditText
        android:id="@+id/etName"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28sp"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="28sp"
        app:layout_constraintEnd_toEndOf="@+id/chipGroup"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/chipGroup"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_HintHeight"
        app:layout_constraintBottom_toBottomOf="@+id/etHeight"
        app:layout_constraintEnd_toStartOf="@+id/etHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etHeight"
        app:layout_constraintVertical_bias="0.523" />

    <ImageView
        android:id="@+id/ivUpdateProfile"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:background="@drawable/ic_commit_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etWeight"
        app:layout_constraintStart_toStartOf="@+id/etWeight"
        app:layout_constraintTop_toBottomOf="@+id/etWeight" />

    <ImageView
        android:id="@+id/ivSaveNewProfile"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:background="@drawable/ic_add_profile_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvWeight"
        app:layout_constraintStart_toStartOf="@+id/tvWeight"
        app:layout_constraintTop_toBottomOf="@+id/tvWeight" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>